welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:59: error: expected class or object definition
def growFlowers() {      //1 motif de fleurs
^FlowerCase:67: error: Unmatched closing brace '}' ignored here
}
^